src/test/ui/feature-gate-unsized_tuple_coercion.stderr
error[E0658]: Unsized tuple coercion is not stable enough for use and is subject to change (see issue #42877)
  --> $DIR/feature-gate-unsized_tuple_coercion.rs:12:24
   |
12 |     let _ : &(Send,) = &((),);
   |                        ^^^^^^
   |
   = help: add #![feature(unsized_tuple_coercion)] to the crate attributes to enable

error: aborting due to previous error

